--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+div {
+  margin-top: 50px;
+}
+form {
+  width: 30%;
+
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+form > input {
+  margin-bottom: 20px;
+  height: 20px;
+}
+.checkbox {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+
+.checkbox input {
+  align-self: baseline;
+  margin-right: 20px;
+}
+
+fieldset {
+  margin-bottom: 20px;
+}
+
+.fieldset-child {
+  display: flex;
+}
+
+.fieldset-child > input {
+  align-self: baseline;
+  margin-right: 20px;
+  /* margin-bottom: 5px; */
+}
+.drop-down {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.drop-down label {
+  margin-bottom: 10px;
 }
