--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,48 @@
 body {
+  background-color: rgb(21, 88, 88);
+}
+.container {
+  background-color: white;
+  border-radius: 30px;
+  width: 30%;
+  /* height: 80vh; */
+  border: 2px solid black;
+  margin: 150px auto;
+}
+.form-container {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-control {
+  height: 50px;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+
+.form-container button {
+  background-color: rgb(147, 147, 228);
+  color: white;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.form-container button:hover {
+  transform: scale(1.05);
+}
+
+input {
+  text-indent: 10px;
+}
+
+input:focus {
+  background-color: blanchedalmond;
+}
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -29,8 +73,7 @@ form > input {
 }
 .checkbox {
   display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
+  
 }
 
 .checkbox input {
@@ -49,7 +92,6 @@ fieldset {
 .fieldset-child > input {
   align-self: baseline;
   margin-right: 20px;
-  /* margin-bottom: 5px; */
 }
 .drop-down {
   display: flex;
@@ -58,4 +100,4 @@ fieldset {
 }
 .drop-down label {
   margin-bottom: 10px;
-}
+} */
